Fixing spacing, logic

--- a/src/components/List/index.module.scss
+++ b/src/components/List/index.module.scss
@@ -17,3 +17,10 @@
 .icon {
     box-shadow: rgba(84, 70, 35, 0.08) 0px 2px 4px, rgba(84, 70, 35, 0.08) 0px 1px 3px;
 }
+
+
+.closeBtn {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+}
