--- a/src/components/Type/index.module.scss
+++ b/src/components/Type/index.module.scss
@@ -22,6 +22,7 @@
 
 .title3 {
     font-size: $f3;
+    line-height: 1.1;
     font-weight: 700;
     letter-spacing: -0.01em;
 }
